--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emailjs/browser": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
